{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 418,
  "lineage": "f10ce00e-10b5-9f8e-cecd-b28305cb1534",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadaeast",
            "name": "network-nsg1",
            "resource_group_name": "network_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadaeast",
            "name": "network-nsg2",
            "resource_group_name": "network_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network_rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network_rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg1",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg2asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e5d9465e-c145-408d-b428-7ab1833e3920",
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadaeast",
            "name": "network-vnet",
            "resource_group_name": "network_rg"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605112-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/windows_rg/providers/Microsoft.Network/networkInterfaces/n01605112-w-vm1-nic",
            "internal_domain_name_suffix": "lzdntzkfyggubnbipkyygprzea.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605112-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/windows_rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm1-pip",
                "subnet_id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadaeast",
            "name": "n01605112-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "windows_rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network_rg",
            "module.resource_group.azurerm_resource_group.windows_rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605112-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605112-w-vm1",
            "fqdn": "n01605112-w-vm1.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/eea0c124-f3fc-4434-9405-27b34384b23c/resourceGroups/windows_rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "n01605112-w-vm1-pip",
            "resource_group_name": "windows_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows_rg"
          ]
        }
      ]
    }
  ]
}